[tool.poetry]
name = "HikariBot"
version = "0.1.0"
description = "Nonebot2 HikariBot,支持战舰世界水表查询"
authors = ["benx1n <shirakamikanade@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benx1n/HikariBot"
repository = "https://github.com/benx1n/HikariBot"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-htmlrender = ">=0.0.4"
nonebot-plugin-gocqhttp = "^0.5.5"
httpx = ">=0.19.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
